<resources>
    <string name="app_name">Malakaviy Amaliyot</string>
    <string name="tel_raqam">Tel raqam</string>
    <string name="parol">Parol</string>
    <string name="kirish">Kirish</string>
    <string name="nmpi">NMPI</string>
    <string name="malakaviy_amaliyot_nizomi">Malakaviy amaliyot nizomi</string>
    <string name="kundalik">Kundalik</string>
    <string name="malakaviy_amaliyot_bo_yicha_metodik_tavsiya">Malakaviy amaliyot bo\'yicha\n metodik tafsifnoma</string>
    <string name="namunaviy_hisobot">Namunaviy Hisobot</string>
    <string name="mualliflar">Mualliflar</string>
    <string name="kutubxona">Kutubxona</string>
    <string name="qo_shimcha_tavsiyalar">Qo\'shimcha Tavsiyalar</string>
    <string name="galeriya">Galeriya</string>
    <string name="topshiriqlar">Topshiriqlar</string>
    <string name="malakaviy_amaliyot_maydonchasi">Malakaviy amaliyot maydonchasi</string>
    <string name="malakaviy_amaliyot_hujjatlari">Malakaviy amaliyot hujjatlari</string>
    <string name="kutubxona_text">
        «AQLIY XUJUM» metodi. Aqliy xujum – bu g`oyalarni generatsiya (ishlab chiqish) qilish metodidir. «Aqliy xujum» metodi biror muammoni echishda
o`quvchilar tomonidan bildirilgan erkin fikr va mulohazalarni to`plab, ular orqali
ma`lum bir echimga kelinadigan eng samarali metoddir. Aqliy xujum metodining
yozma va og`zaki shakllari mavjud. Og`zaki shaklida o`qituvchi tomonidan
berilgan savolga o`quvchilarning har biri o`z fikrini og`zaki bildiradi. O`quvchilar
o`z javoblarini aniq va qisqa tarzda bayon etadilar. Yozma shaklida esa berilgan
savolga o`quvchilar o`z javoblarini qog`oz kartochkalarga qisqa va barchaga
ko`rinarli tarzda yozadilar. Javoblar doskaga (magnitlar yordamida) yoki
«pinbord» doskasiga (ignalar yordamida) mahkamlanadi. «Aqliy xujum»
metodining yozma shaklida javoblarni ma`lum belgilar bo`yicha guruhlab chiqish
imkoniyati mavjuddir. Ushbu metod to`g`ri va ijobiy qo`llanilganda shaxsni erkin,
ijodiy va nostandart fikrlashga o`rgatadi.\n\n
    </string>
    <string name="ma_hujjatlari_text">
        Malakaviy amaliyotning sifatli va samarali yuritilishi ko\'p jihatdan amaliyot jarayonida talab qilinadigan hujjatlarning to\'g\'ri, to\'liq va o\'z vaqtida to\'ldirib borishini taqazo etadi.
        Malakaviy amaliyot davomida quyidagi hujjatlar yuritiladi:
        \n1. Amaliyot kundaligi.
        \n2. Amaliyotchi-talabaning shaxsiy ish &#8195;&#8195;rejasi.
        \n3. Amaliyotchi-talabaga muassasa &#8195;&#8195;tomonidan berilgan tavsifnoma.
        \n4. Amaliyot hisoboti(taqdimot, elektron &#8195;&#8195;disk va yozma shaklda).
    </string>
    <string name="sinf">Sinf:</string>
    <string name="sana">Sana:</string>
    <string name="soat">Soat:</string>
    <string name="qatnashuvchilar">Qatnashuvchilar:</string>
    <string name="mavzu">Mavzu:</string>
    <string name="bayonnoma">Bayonnoma:</string>
    <string name="yuborish">Yuborish</string>
    <string name="rasm_yuklash">Rasm yuklash</string>
    <string name="rasm_tanlash">Rasm tanlash</string>
    <string name="rasmni_yuklash">Rasmni yuklash</string>
</resources>