<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Kirish">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:background="@color/white"
        android:contentDescription="@string/nmpi"
        app:srcCompat="@drawable/icon" />

    <EditText
        android:id="@+id/telRaqam"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/tel_raqam"
        android:inputType="number" />

    <EditText
        android:id="@+id/parol"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/telRaqam"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/parol"
        android:inputType="text" />

    <Button
        android:id="@+id/kirishButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/parol"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/kirish" />


</RelativeLayout>