<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RasmYuklash">

    <TextView
        android:id="@+id/rasmYuklashTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/rasm_yuklash"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/sinfTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rasmYuklashTV"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/sinf"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/sinfET"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/sinfTV"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="-12dp"
        android:layout_toEndOf="@+id/sinfTV"
        android:inputType="text"
        android:maxLength="4" />

    <TextView
        android:id="@+id/sanaTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sinfTV"
        android:layout_alignStart="@+id/sinfTV"
        android:layout_marginTop="20dp"
        android:text="@string/sana"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/sanaET"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/sanaTV"
        android:layout_alignBottom="@+id/sanaTV"
        android:layout_marginStart="10dp"
        android:layout_marginTop="-12dp"
        android:layout_marginBottom="-12dp"
        android:layout_toEndOf="@+id/sinfTV"
        android:inputType="text"
        android:maxLength="10" />

    <ImageView
        android:id="@+id/imageID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/chooseBtn"
        android:layout_below="@+id/sanaTV"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="45dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop" />

    <Button
        android:id="@+id/chooseBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        android:onClick="selectImage"
        android:text="@string/rasm_tanlash" />

    <Button
        android:id="@+id/uploadBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:onClick="uploadImage"
        android:text="@string/rasmni_yuklash" />
</RelativeLayout>