<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/icon_bg"
            app:srcCompat="@drawable/icon"
            tools:ignore="MissingConstraints" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        tools:ignore="MissingConstraints">

        <RelativeLayout
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/kundalikTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/teal_700"
                android:text="@string/kundalik"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/maNizomiTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/kundalikTV"
                android:layout_marginTop="10dp"
                android:background="@color/teal_700"
                android:text="@string/malakaviy_amaliyot_nizomi"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/maBuyichaMetodikTavsiyaTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/maNizomiTV"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@color/teal_700"
                android:text="@string/malakaviy_amaliyot_bo_yicha_metodik_tavsiya"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/maHujjatlariTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/maBuyichaMetodikTavsiyaTV"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@color/teal_700"
                android:text="@string/malakaviy_amaliyot_hujjatlari"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/maMaydonchasiTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/maHujjatlariTV"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@color/teal_700"
                android:text="@string/malakaviy_amaliyot_maydonchasi"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/topshiriqlarTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/maMaydonchasiTV"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@color/teal_700"
                android:text="@string/topshiriqlar"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/galeriyaTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/topshiriqlarTV"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@color/teal_700"
                android:text="@string/galeriya"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/namunaviyHisobotTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/galeriyaTV"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@color/teal_700"
                android:text="@string/namunaviy_hisobot"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/qushimchaTavsiyalarTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/namunaviyHisobotTV"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@color/teal_700"
                android:text="@string/qo_shimcha_tavsiyalar"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/KutubxonaTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/qushimchaTavsiyalarTV"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@color/teal_700"
                android:text="@string/kutubxona"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/MualliflarTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/amaliyot_baxolariTV"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@color/teal_700"
                android:text="@string/mualliflar"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/amaliyot_baxolariTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/KutubxonaTV"
                android:layout_marginTop="10dp"
                android:background="@color/teal_700"
                android:textStyle="bold"
                android:text="Amaliyot baxolari"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RelativeLayout>
    </ScrollView>

</LinearLayout>